v1 | add onMessageBubbleClick + ConversationEntry + refactor